--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "axios": "^0.24.0",
     "cheerio": "^1.0.0-rc.10",
     "dotenv": "^10.0.0",
+    "express": "^4.17.1",
     "moment": "^2.29.1",
     "moment-timezone": "^0.5.34",
     "node-telegram-bot-api": "^0.54.0",
-    "nodemon": "^2.0.15"
+    "nodemon": "^2.0.15",
+    "pg": "^8.7.1"
   }
 }
